# crypto-websocket

./: .gitignore  Cargo.toml  README.md  analyze.py  config.toml
src/: config.rs  events.rs  main.rs  prices.rs  router.rs
src/connectors/: binance.rs  coinbase.rs  deribit.rs  kraken.rs  mod.rs
src/ops/: health.rs  logging.rs  metrics.rs  mod.rs
src/pipeline/: iv_surface.rs  mod.rs  spot_mid.rs
src/sinks/: mod.rs  parquet.rs  redis.rs
